{"message":"Update file: 2019.md","userId":"978","fileName":"2019.md"}

--- a/_community-of-success/News Gallery/2019.md
+++ b/_community-of-success/News Gallery/2019.md
@@ -5,4 +5,4 @@ variant: tiptap
 description: ""
 third_nav_title: News Gallery
 ---
-<h2>2018</h2><hr><p></p><div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/masagos-ap-melayuislam-pap-lakar-pelan-bertindak-m3" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Masagos, AP Melayu/Islam PAP lakar pelan bertindak M³</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/gabungan-tiga-badan-melayuislam-m3-akan-perkukuh-kegiatan" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Gabungan tiga badan Melayu/Islam, M³, akan perkukuh kegiatan</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/masagos-gesa-golongan-berjaya-sumbang-bantuan-menerusi-m3" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Masagos gesa golongan berjaya sumbang bantuan menerusi M³</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/m3-gembleng-tenaga-relawan-karyawan-bagi-manfaat-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">M³ gembleng tenaga relawan karyawan bagi manfaat masyarakat</div><div class="isomer-card-link">Read more</div></div></a></div><p></p><p></p>
+<h2>2019</h2><hr><p></p><div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/masagos-m3-mahu-ajak-masyarakat-lakar-dasar-bersama" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Masagos: M³ mahu ajak masyarakat lakar dasar bersama</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/kempen-inspirasisg-bagi-cungkil-kisah-inspirasi" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Kempen #InspirasiSG bagi cungkil kisah inspirasi</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/peraduan-inspirasisg-pengalaman-hidup-bakar-semangat-sumbang-kepada-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Pengalaman hidup bakar semangat sumbang kepada masyarakat</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/projek-m%C2%B3-galak-belia-bentuk-masa-depan-spura-dilancar" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Singapura Akses Percuma Projek M³ galak belia bentuk masa depan S'pura dilancar</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/gunting-rambut-percuma-untuk-sumbang-semula-kepada-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Gunting rambut percuma untuk sumbang semula kepada masyarakat</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/dari-penjara-jadi-peniaga-kek" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Dari penjara jadi peniaga kek</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/masih-jadi-pandu-puteri-pada-usia-65-tahun" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Masih jadi Pandu Puteri pada usia 65 tahun</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/mendaki-muis-dan-mesra-lancar-pejabat-bersama-di-wisma-geylang-serai" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Mendaki, Muis dan Mesra lancar pejabat bersama di Wisma Geylang Serai</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/pejabat-bersama-m3-dibuka-beri-khidmat-kepada-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Pejabat bersama M³ dibuka, beri khidmat kepada masyarakat</div><div class="isomer-card-link">Read more</div></div></a></div><p></p>
