{"message":"Update file: 2021.md","userId":"978","fileName":"2021.md"}

--- a/_community-of-success/News Gallery/2021.md
+++ b/_community-of-success/News Gallery/2021.md
@@ -5,3 +5,4 @@ variant: tiptap
 description: ""
 third_nav_title: News Gallery
 ---
+<h2>2021</h2><hr><p></p><div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/gaya-hidup/2-individu-ini-teroka-fesyen-mampan-jadikan-industri-fesyen-46406" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">2 individu ini teroka fesyen mampan jadikan industri fesyen Singapura lebih mesra alam</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/59-penuntut-terima-biasiswa-psc-tahun-ini-18481" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">59 penuntut terima Biasiswa PSC tahun ini</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/masyarakat-melayu-harus-berbangga-dengan-tahap-pendidikan-26271" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Masyarakat Melayu harus berbangga dengan tahap pendidikan dikecapi; perlu terus bekerja keras, tingkatkan pencapaian</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/faishal-m%C2%B3-terus-sokong-usaha-bangunkan-famili-melayuislam" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Faishal: M³ terus sokong usaha bangunkan famili Melayu/Islam</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/cemerlang-akademik-gemilang-kerja-amal" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Cemerlang akademik, gemilang kerja amal</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/4pm-teroka-bidang-kerjasama-baru-dengan-m3-badan-melayu-lain" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">4PM teroka bidang kerjasama baru dengan M3, badan Melayu lain</div><div class="isomer-card-link">Read more</div></div></a></div><p></p>
