{"message":"Update file: 2022.md","userId":"978","fileName":"2022.md"}

--- a/_community-of-success/News Gallery/2022.md
+++ b/_community-of-success/News Gallery/2022.md
@@ -5,3 +5,4 @@ variant: tiptap
 description: ""
 third_nav_title: News Gallery
 ---
+<h2>2022</h2><hr><p></p><div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/penerima-anugerah-mendaki-kini-peguam-berjaya-gigih-sumbang-kembali-kepada-masyarakat-710511" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Penerima Anugerah MENDAKI kini peguam berjaya; gigih sumbang kembali kepada masyarakat</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/tonton/tarian-bangkit-semangatku-galak-masyarakat-berdiri-teguh-cekal-capai-aspirasi-647651" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Tarian 'Bangkit SemangatKu' galak masyarakat berdiri teguh, cekal capai aspirasi</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/4-siswa-universiti-terima-anugerah-pengajian-kerja-sosial-muis-tahun-ini-663636" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">4 siswa universiti terima Anugerah Pengajian Kerja Sosial MUIS tahun ini</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/peranan-kaum-minoriti-kekalkan-harmoni-dihargai-0" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Peranan kaum minoriti kekalkan harmoni dihargai</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/kehidupan-minoriti-masyarakat-islam-sg-boleh-dicontohi" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Kehidupan minoriti masyarakat Islam SG boleh dicontohi</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/rencana/muslim-new-zealand-minat-pelajari-model-islam-spura" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Muslim New Zealand minat pelajari model Islam S'pura</div><div class="isomer-card-link">Read more</div></div></a></div><p></p>
