{"message":"Update file: 2023.md","userId":"978","fileName":"2023.md"}

--- a/_community-of-success/News Gallery/2023.md
+++ b/_community-of-success/News Gallery/2023.md
@@ -5,4 +5,56 @@ variant: tiptap
 description: ""
 third_nav_title: News Gallery
 ---
-<h2>2023</h2><hr><p></p><div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/200-karyawan-muda-bincang-isu-kongsi-idea-majukan-masyarakat-melayu-islam-769196" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">200 karyawan muda bincang isu; kongsi idea majukan masyarakat Melayu/Islam</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/sumbangan-meluas-presiden-pergas-ustaz-tarmizi-wahid-bukti-keprihatinannya-terhadap-masyarakat-766536" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Sumbangan meluas presiden PERGAS, Ustaz Tarmizi Wahid bukti keprihatinannya terhadap masyarakat</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/konvokesyen-suss-seri-sulastri-ambil-8-tahun-raih-ijazah-nur-friday-belajar-di-koridor-rumah-sewa-792581?cid=internal_mcdrecs_11102023_berita#mdcrecs_s" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Konvokesyen SUSS: Seri Sulastri ambil 8 tahun raih ijazah, Nur Friday belajar di koridor rumah sewa</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/buku-when-nasi-lemak-meets-sushi-dilancarkan-kongsi-pengalaman-hidup-masyarakat-muslim-jepun-di-sg-737481" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Buku 'When Nasi Lemak Meets Sushi' dilancarkan, kongsi pengalaman hidup masyarakat Muslim Jepun di SG</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/wanita-melayu-pertama-yang-jadi-juruterbang-komersil-farhain-abu-bakar-kini-seorang-kapten-789971" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Wanita Melayu pertama yang jadi juruterbang komersil Farhain Abu Bakar kini seorang Kapten</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/nadi-kampus/nadi-kampus-lulusan-politeknik-eva-helina-jadi-tauke-tempat-main-kucing-di-kampong-gelam-pada-usia-27-tahun-789881" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Nadi Kampus: Lulusan politeknik, Eva Helina, jadi 'tauke' tempat main kucing di Kampong Gelam pada usia 27 tahun</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/madrasah-alsagoff-al-arabiah-juara-bertahan-bahas-4pm-selepas-tumpaskan-politeknik-ngee-ann-781941" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Madrasah Alsagoff Al-Arabiah juara bertahan Bahas 4PM selepas tumpaskan Politeknik Ngee Ann</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/madrasah-alsagoff-juara-bahas-bahasa-arab-antarabangsa-di-qatar-784031" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Madrasah Alsagoff juara bahas bahasa Arab antarabangsa di Qatar</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/pejabat-ehwal-jemaah-sg-terima-anugerah-labbaitum-kementerian-haji-dan-umrah-kerajaan-arab-saudi-767501" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Pejabat Ehwal Jemaah SG terima Anugerah Labbaitum Kementerian Haji dan Umrah Kerajaan Arab Saudi</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/pendekatan-berbilang-disiplin-tangani-isu-baru-dalam-masyarakat-islam-738421" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Pendekatan berbilang disiplin tangani isu baru dalam masyarakat Islam</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://safe.menlosecurity.com/https:/berita.mediacorp.sg/singapura/sesi-rangkaian-belia-diadakan-di-m3jalan-besar-galak-golongan-belia-sumbang-kembali-kepada-masyarakat-733666" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Sesi rangkaian belia diadakan di M³@Jalan Besar; galak golongan belia sumbang kembali kepada masyarakat</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/komentar/komentar-suara-belia-suara-sg-memperkasakan-belia-melalui-dialog-membina-739186" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">KOMENTAR: 'Suara Belia, Suara SG' - Memperkasakan belia melalui dialog membina</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/bina-ciri-mandiri-mantap-dan-maju-masyarakat-demi-perkukuh-negara-masagos-751206" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Bina ciri 'Mandiri, Mantap dan Maju' masyarakat demi perkukuh negara: Masagos</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/masyarakat-melayu-islam-harungi-cabaran-2022-dengan-bersatu-lebih-bersedia-hadapi-rintangan-akan-datang-724546" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Masyarakat Melayu/Islam harungi cabaran 2022 dengan bersatu, lebih bersedia hadapi rintangan akan datang</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/m3-telah-berkembang-dalam-penuhi-keperluan-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">M³ telah berkembang dalam penuhi keperluan masyarakat</div><div class="isomer-card-link">Read more</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.isomer.gov.sg" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">This is a title for your card</div><div class="isomer-card-description">This is body text for your card. Describe your card.</div><div class="isomer-card-link">This is a link for your card</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.isomer.gov.sg" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">This is a title for your card</div><div class="isomer-card-description">This is body text for your card. Describe your card.</div><div class="isomer-card-link">This is a link for your card</div></div></a><a rel="noopener noreferrer nofollow" href="https://www.isomer.gov.sg" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">This is a title for your card</div><div class="isomer-card-description">This is body text for your card. Describe your card.</div><div class="isomer-card-link">This is a link for your card</div></div></a></div><p></p>
+<h2>2023</h2>
+<hr>
+<p></p>
+<div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/200-karyawan-muda-bincang-isu-kongsi-idea-majukan-masyarakat-melayu-islam-769196" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">200 karyawan muda bincang isu; kongsi idea majukan masyarakat Melayu/Islam</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/sumbangan-meluas-presiden-pergas-ustaz-tarmizi-wahid-bukti-keprihatinannya-terhadap-masyarakat-766536" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Sumbangan meluas presiden PERGAS, Ustaz Tarmizi Wahid bukti keprihatinannya
+terhadap masyarakat</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/konvokesyen-suss-seri-sulastri-ambil-8-tahun-raih-ijazah-nur-friday-belajar-di-koridor-rumah-sewa-792581?cid=internal_mcdrecs_11102023_berita#mdcrecs_s" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Konvokesyen SUSS: Seri Sulastri ambil 8 tahun raih ijazah, Nur Friday belajar di koridor rumah sewa</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/buku-when-nasi-lemak-meets-sushi-dilancarkan-kongsi-pengalaman-hidup-masyarakat-muslim-jepun-di-sg-737481" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Buku 'When Nasi Lemak Meets Sushi' dilancarkan, kongsi pengalaman hidup
+masyarakat Muslim Jepun di SG</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/wanita-melayu-pertama-yang-jadi-juruterbang-komersil-farhain-abu-bakar-kini-seorang-kapten-789971" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Wanita Melayu pertama yang jadi juruterbang komersil Farhain Abu Bakar kini seorang Kapten</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/nadi-kampus/nadi-kampus-lulusan-politeknik-eva-helina-jadi-tauke-tempat-main-kucing-di-kampong-gelam-pada-usia-27-tahun-789881" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Nadi Kampus: Lulusan politeknik, Eva Helina, jadi 'tauke' tempat main
+kucing di Kampong Gelam pada usia 27 tahun</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/madrasah-alsagoff-al-arabiah-juara-bertahan-bahas-4pm-selepas-tumpaskan-politeknik-ngee-ann-781941" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Madrasah Alsagoff Al-Arabiah juara bertahan Bahas 4PM selepas tumpaskan Politeknik Ngee Ann</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/madrasah-alsagoff-juara-bahas-bahasa-arab-antarabangsa-di-qatar-784031" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Madrasah Alsagoff juara bahas bahasa Arab antarabangsa di Qatar</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/pejabat-ehwal-jemaah-sg-terima-anugerah-labbaitum-kementerian-haji-dan-umrah-kerajaan-arab-saudi-767501" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Pejabat Ehwal Jemaah SG terima Anugerah Labbaitum Kementerian Haji dan Umrah Kerajaan Arab Saudi</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/pendekatan-berbilang-disiplin-tangani-isu-baru-dalam-masyarakat-islam-738421" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Pendekatan berbilang disiplin tangani isu baru dalam masyarakat Islam</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://safe.menlosecurity.com/https:/berita.mediacorp.sg/singapura/sesi-rangkaian-belia-diadakan-di-m3jalan-besar-galak-golongan-belia-sumbang-kembali-kepada-masyarakat-733666" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Sesi rangkaian belia diadakan di M³@Jalan Besar; galak golongan belia sumbang kembali kepada masyarakat</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/komentar/komentar-suara-belia-suara-sg-memperkasakan-belia-melalui-dialog-membina-739186" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">KOMENTAR: 'Suara Belia, Suara SG' - Memperkasakan belia melalui dialog
+membina</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/bina-ciri-mandiri-mantap-dan-maju-masyarakat-demi-perkukuh-negara-masagos-751206" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Bina ciri 'Mandiri, Mantap dan Maju' masyarakat demi perkukuh negara: Masagos</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://berita.mediacorp.sg/singapura/masyarakat-melayu-islam-harungi-cabaran-2022-dengan-bersatu-lebih-bersedia-hadapi-rintangan-akan-datang-724546" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Masyarakat Melayu/Islam harungi cabaran 2022 dengan bersatu, lebih bersedia
+hadapi rintangan akan datang</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/m3-telah-berkembang-dalam-penuhi-keperluan-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">M³ telah berkembang dalam penuhi keperluan masyarakat</div><div class="isomer-card-link">Read more</div></div></a>
+</div>
+<p></p>
