{"message":"Update file: 2024.md","userId":"978","fileName":"2024.md"}

--- a/_community-of-success/News Gallery/2024.md
+++ b/_community-of-success/News Gallery/2024.md
@@ -5,3 +5,16 @@ variant: tiptap
 description: ""
 third_nav_title: News Gallery
 ---
+<h2>2024</h2>
+<hr>
+<p></p>
+<p></p>
+<div class="isomer-card-grid"><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/singapura/bh-berperanan-bentuk-identiti-masyarakat-melayu-spura-masagos" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">BH berperanan bentuk identiti masyarakat Melayu S’pura: Masagos</div><div class="isomer-card-link">Read more</div></div></a>
+<a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/singapura/muslim-spura-jaya-bukti-kemajuan-dalam-negara-sekular-masagos" class="isomer-card">
+<div class="isomer-card-body">
+<div class="isomer-card-title">Muslim S’pura jaya bukti kemajuan dalam negara sekular: Masagos</div>
+<div class="isomer-card-link">Read more</div>
+</div>
+</a>
+</div>
+<p></p>
