{"message":"Update file: 2023.md","userId":"4937","fileName":"2023.md"}

--- a/_community-of-success/News Gallery/2023.md
+++ b/_community-of-success/News Gallery/2023.md
@@ -55,12 +55,6 @@ membina</div>
 hadapi rintangan akan datang</div>
 <div class="isomer-card-link">Read more</div>
 </div>
-</a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/m3-telah-berkembang-dalam-penuhi-keperluan-masyarakat" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">M³ telah berkembang dalam penuhi keperluan masyarakat</div><div class="isomer-card-link">Read more</div></div></a>
-<a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/program-m3-catat-beberapa-kejayaan-tapi-masih-di-tahap-awal-masagos" class="isomer-card">
-<div class="isomer-card-body">
-<div class="isomer-card-title">Program M³ catat beberapa kejayaan, tapi masih di tahap awal: Masagos</div>
-<div class="isomer-card-link">Read more</div>
-</div>
-</a>
+</a><a rel="noopener noreferrer nofollow" href="https://www.beritaharian.sg/setempat/program-m3-catat-beberapa-kejayaan-tapi-masih-di-tahap-awal-masagos" class="isomer-card"><div class="isomer-card-body"><div class="isomer-card-title">Program M³ catat beberapa kejayaan, tapi masih di tahap awal: Masagos</div><div class="isomer-card-link">Read more</div></div></a>
 </div>
 <p></p>
